--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/home.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 
@@ -19,10 +21,19 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
 
+    <!-- managing static files add ad sttatic -->
+
     <title>Home</title>
     <style>
         .image {
             margin: 20px;
+        }
+        .carousel-inner {
+            width: 70%;
+            height: 40%;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -50,15 +61,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/IMG-0980"
-                    class="d-block w-100" alt="...">
+                <img src="{% static 'volunteerapp/IMG-1123.JPG' %}" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="images/IMG-1123" class="d-block w-100" alt="...">
+                <img src="{% static 'volunteerapp/IMG-0516.JPG' %}" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="images/IMG-car"
-                    class="d-block w-100" alt="...">
+                <img src="{% static 'volunteerapp/IMG-0980.jpg' %}" class="d-block w-100" alt="...">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
