--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/news.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/news.html
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'volunteerapp/base.html' %}
+{% load static %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-</head>
+{% block content %}
 
-<body>
-    <h1>{{message}}</h1>
-    
-    
-</body>
+<h1>news page</h1>
 
-</html>
+{% endblock %}
