--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/register.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/register.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {{message}}
-</body>
-</html>
+{% extends 'volunteerapp/base.html' %}
+{% load static %}
+
+{% block content %}
+
+<h1>register page</h1>
+
+{% endblock %}
