--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/register.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/register.html
@@ -3,6 +3,137 @@
 
 {% block content %}
 
-<h1>register page</h1>
+<style>
+    h1 {
+        text-align: center;
+    }
+
+    * {
+        box-sizing: border-box;
+    }
+
+    input {
+        width: 75%;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        resize: vertical;
+    }
+
+    label {
+        padding: 12px 12px 12px 0;
+        display: inline-block;
+    }
+
+    input[type=submit] {
+        background-color: #4CAF50;
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        float: right;
+        width: 25%;
+        margin-left: 450px;
+        
+    }
+
+    input[type=submit]:hover {
+        background-color: #45a049;
+    }
+
+    .container {
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+    }
+
+    .col-25 {
+        float: left;
+        width: 25%;
+        margin-top: 6px;
+    }
+
+    .col-75 {
+        float: left;
+        width: 75%;
+        margin-top: 6px;
+    }
+
+
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+
+    @media screen and (max-width: 600px) {
+
+        .col-25,
+        .col-75,
+        input[type=submit] {
+            width: 100%;
+            margin-top: 0;
+        }
+    }
+</style>
+
+<h1>Register</h1>
+
+<!-- <form method="POST" action=" {% url 'volunteerapp:register' %} ">
+    {% csrf_token %}
+
+    <input type="text" name="username" placeholder="username">
+    <input type="email" name="email" placeholder="email">
+    <input type="password" name="password" placeholder="password">
+    <input type="password" name="retype_password" placeholder="retype_password">
+
+
+    <input type="submit" name="Create User"> -->
+
+<div class="container">
+    <form action="{% url 'volunteerapp:register' %}">
+        <div class="row">
+            <div class="col-25">
+                <label for="fname">Username</label>
+            </div>
+            <div class="col-75">
+                <!-- <input type="text" id="fname" name="firstname" placeholder="Your name.."> -->
+                <input type="text" name="username" placeholder="username">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-25">
+                <label for="lname">Email</label>
+            </div>
+            <div class="col-75">
+                <!-- <input type="text" id="lname" name="lastname" placeholder="Your last name.."> -->
+                <input type="email" name="email" placeholder="email">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-25">
+                <label for="country">Password</label>
+            </div>
+            <div class="col-75">
+                <input type="password" name="password" placeholder="password">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-25">
+                <label for="subject">Retype Password</label>
+            </div>
+            <div class="col-75">
+                <input type="password" name="retype_password" placeholder="retype_password">
+            </div>
+        </div>
+        <div class="row">
+            <input type="submit" value="Submit">
+        </div>
+    </form>
+</div>
+
+</form>
 
 {% endblock %}
