--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/register.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/register.html
@@ -131,7 +131,7 @@
             </div>
             <div class="col-75">
                 <!-- <input type="text" id="fname" name="firstname" placeholder="Your name.."> -->
-                <input type="text" name="username" placeholder="username">
+                <input type="text" name="username" placeholder="username" required autocomplete="off">
             </div>
         </div>
         <div class="row">
@@ -140,7 +140,7 @@
             </div>
             <div class="col-75">
                 <!-- <input type="text" id="lname" name="lastname" placeholder="Your last name.."> -->
-                <input type="email" name="email" placeholder="email">
+                <input type="email" name="email" placeholder="email" required autocomplete="off">
             </div>
         </div>
         <div class="row">
@@ -148,7 +148,7 @@
                 <label for="country">Password</label>
             </div>
             <div class="col-75">
-                <input type="password" name="password" placeholder="password">
+                <input type="password" name="password" placeholder="password" required autocomplete="off">
             </div>
         </div>
         <div class="row">
@@ -156,7 +156,7 @@
                 <label for="subject">Retype Password</label>
             </div>
             <div class="col-75">
-                <input type="password" name="retype_password" placeholder="retype_password">
+                <input type="password" name="retype_password" placeholder="retype_password" required autocomplete="off">
             </div>
         </div>
         <div class="row">
