--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/login.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/login.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <h1>login page</h1>
-<form action="{% url 'users:login_page' %}" method="post">
+<form action="{% url 'volunteerapp:login_page' %}" method="post">
     {% csrf_token %}
     <input type="text" name="username" placeholder="username" required />
     <input type="password" name="password" placeholder="password" required />
