--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/register.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/register.html
@@ -178,8 +178,8 @@
         {{message}}
     </div>
 {% else %}
-    <div class="isa_success">
-        <i class="fa fa-check"></i>
+    <!-- <div class="isa_success">
+        <i class="fa fa-check"></i> -->
         {{message}}
     </div>
 {% endif %}
