--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/news.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/news.html
@@ -7,18 +7,22 @@
     .media {
         margin: 30px;
     }
+    .align-self-center {
+        width: 400px;
+    }
 </style>
 
+{% for post in posts %}
 <div class="media">
-    <img src="..." class="align-self-center mr-3" alt="...">
+    <img src="{{post.picture.url}}" class="align-self-center mr-3" alt="...">
     <div class="media-body">
-        <h5 class="mt-0">Center-aligned media</h5>
-        <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
-            vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec
-            lacinia congue felis in faucibus.</p>
-        <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque
-            penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <h5 class="mt-0">{{post.title}}</h5>
+        <p>{{post.content}}</p>
+        <p class="mb-0">{{post.date_posted}}</p>
+        
     </div>
 </div>
+
+{% endfor %}
 
 {% endblock %}
