created add page

--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/base.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/base.html
@@ -29,15 +29,16 @@
             margin: 20px;
         }
 
-        .carousel-inner {
-            width: 75%;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 20px;
-        }
-
         body {
             background-color: ivory;
+        }
+
+        a.nav-item.nav-link {
+           margin-left: 50px;
+        }
+
+        nav {
+            border-bottom: 20px gray;
         }
       
     </style>
@@ -55,9 +56,9 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="{% url 'volunteerapp:home' %}">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link active" href="{% url 'volunteerapp:news' %}">News</a>
-                <a class="nav-item nav-link" href="{% url 'volunteerapp:register' %}" text>Register</a>
-                <a class="nav-item nav-link" href="{% url 'volunteerapp:login_page' %}">Login</a>
-                <a class="nav-item nav-link" href="{% url 'volunteerapp:logout_user' %}">Logout</a>
+                <a class="nav-item nav-link grey" href="{% url 'volunteerapp:register' %}" text>Register</a>
+                <a class="nav-item nav-link grey" href="{% url 'volunteerapp:login_page' %}">Login</a>
+                <a class="nav-item nav-link grey" href="{% url 'volunteerapp:logout_user' %}">Logout</a>
                 <!-- <a class="nav-item nav-link" href="#">Pricing</a>
                 <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
             </div>
