--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/home.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/home.html
@@ -3,49 +3,72 @@
 
 
 {% block content %}
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="{% static 'volunteerapp/IMG-1123.JPG' %}" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="{% static 'volunteerapp/IMG-0516.JPG' %}" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="{% static 'volunteerapp/IMG-0980.jpg' %}" class="d-block w-100" alt="...">
-            </div>
+
+<style>
+    .carousel-inner {
+        width: 75%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        margin-bottom: 40px;
+    }
+
+    .media {
+        margin: 20px;
+        border-radius: 25px;
+        background: rgb(118, 213, 245);
+        padding: 20px;
+    }
+   
+</style>
+
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="{% static 'volunteerapp/IMG-1123.JPG' %}" class="d-block w-100" alt="...">
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-item">
+            <img src="{% static 'volunteerapp/IMG-0516.JPG' %}" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="{% static 'volunteerapp/IMG-0980.jpg' %}" class="d-block w-100" alt="...">
+        </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 
 
 
 
 
-    {% for organization in organizations %}
+{% for organization in organizations %}
 
-
+<div>
     <div class="media">
-        <!-- <img src="..." class="mr-3" alt="..."> -->
+
+
         <img src="{{organization.picture.url}}" width="85" class="image" />
         <div class="media-body">
-            <h5 class="mt-0">{{organization.name}}</h5>
+            <h5> <a href="{{organization.org_link}}">{{organization.name}}</a></h5>
+            
             {{organization.description}}
         </div>
+
         <!-- <div>{{organization.org_link}}</div> -->
     </div>
+</div>
 
 
 
 
-    <!-- <div>
+<!-- <div>
         {{organization.name}}
         {{organization.description}}
         {{organization.org_link}}
@@ -53,8 +76,6 @@
         {{organization.picture}}
     </div> -->
 
-    {% endfor %}
+{% endfor %}
 
 {% endblock %}
-
-
