--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/home.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/home.html
@@ -19,7 +19,6 @@
         background: rgb(118, 213, 245);
         padding: 20px;
     }
-   
 </style>
 
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
@@ -57,14 +56,13 @@
         <img src="{{organization.picture.url}}" width="85" class="image" />
         <div class="media-body">
             <h5> <a href="{{organization.org_link}}">{{organization.name}}</a></h5>
-            
+
             {{organization.description}}
         </div>
 
         <!-- <div>{{organization.org_link}}</div> -->
     </div>
 </div>
-
 
 
 
@@ -77,5 +75,14 @@
     </div> -->
 
 {% endfor %}
+
+    
+
+<a href="#" class="btn btn-info btn-lg">
+    <span class="glyphicon glyphicon-plus"></span> Add Organization
+</a>
+
+
+
 
 {% endblock %}
