--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/add_organization.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/add_organization.html
@@ -3,9 +3,138 @@
 
 {% block content %}
 
+<style type="text/css">
+    .form-style-1 {
+        margin: 10px auto;
+        max-width: 400px;
+        padding: 20px 12px 10px 20px;
+        font: 13px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    }
+
+    .form-style-1 li {
+        padding: 0;
+        display: block;
+        list-style: none;
+        margin: 10px 0 0 0;
+    }
+
+    .form-style-1 label {
+        margin: 0 0 3px 0;
+        padding: 0px;
+        display: block;
+        font-weight: bold;
+    }
+
+    .form-style-1 input[type=text],
+    .form-style-1 input[type=date],
+    .form-style-1 input[type=datetime],
+    .form-style-1 input[type=number],
+    .form-style-1 input[type=search],
+    .form-style-1 input[type=time],
+    .form-style-1 input[type=url],
+    .form-style-1 input[type=email],
+    textarea,
+    select {
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        border: 1px solid #BEBEBE;
+        padding: 7px;
+        margin: 0px;
+        -webkit-transition: all 0.30s ease-in-out;
+        -moz-transition: all 0.30s ease-in-out;
+        -ms-transition: all 0.30s ease-in-out;
+        -o-transition: all 0.30s ease-in-out;
+        outline: none;
+    }
+
+    .form-style-1 input[type=text]:focus,
+    .form-style-1 input[type=date]:focus,
+    .form-style-1 input[type=datetime]:focus,
+    .form-style-1 input[type=number]:focus,
+    .form-style-1 input[type=search]:focus,
+    .form-style-1 input[type=time]:focus,
+    .form-style-1 input[type=url]:focus,
+    .form-style-1 input[type=email]:focus,
+    .form-style-1 textarea:focus,
+    .form-style-1 select:focus {
+        -moz-box-shadow: 0 0 8px #88D5E9;
+        -webkit-box-shadow: 0 0 8px #88D5E9;
+        box-shadow: 0 0 8px #88D5E9;
+        border: 1px solid #88D5E9;
+    }
+
+    .form-style-1 .field-divided {
+        width: 100%;
+    }
+
+    .form-style-1 .field-long {
+        width: 100%;
+    }
+
+    .form-style-1 .field-select {
+        width: 100%;
+    }
+
+    .form-style-1 .field-textarea {
+        height: 100px;
+    }
+
+    .form-style-1 input[type=submit],
+    .form-style-1 input[type=button] {
+        background: #4B99AD;
+        padding: 8px 15px 8px 15px;
+        border: none;
+        color: #fff;
+    }
+
+    .form-style-1 input[type=submit]:hover,
+    .form-style-1 input[type=button]:hover {
+        background: #4691A4;
+        box-shadow: none;
+        -moz-box-shadow: none;
+        -webkit-box-shadow: none;
+    }
+
+    .form-style-1 .required {
+        color: red;
+    }
+</style>
 
 <form action="{% url 'volunteerapp:add_organization' %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
+    <ul class="form-style-1">
+        <li>
+            <!-- <label>Full Name <span class="required">*</span></label>
+            <input type="text" name="field1" class="field-divided" placeholder="First" />  -->
+
+            <label for="input_organization_name">Organization Name <span class="required">*</span></label>
+            <input id="input_organization_name" type="text" class="field-divided" name="organization_name" required />
+        <li>
+            <!-- <label>Email <span class="required">*</span></label>
+            <input type="email" name="field3" class="field-long" /> -->
+            <label for="input_organization_url">Web Address</label>
+            <input id="input_organization_url" type="url" class="field-long" name="organization_url" required />
+        </li>
+        <li>
+            <label for="input_organization_image">Image <span class="required">*</span></label>
+            <input id="input_organization_image" type="file" class="field-long" name="organization_image" accept="image/*" />
+        </li>
+        <li>
+            <!-- <label>Description <span class="required">*</span></label>
+            <textarea name="field5" id="field5" class="field-long field-textarea"></textarea> -->
+
+            <label for="input_description">Description <span class="required">*</span></label>
+            <textarea id="input_description" name="organization_description" class="field-long field-textarea"></textarea>
+        </li>
+        <li>
+            
+            <input type="submit" value="Submit" />
+        </li>
+    </ul>
+</form>
+<!-- <form action="{% url 'volunteerapp:add_organization' %}" method="POST" enctype="multipart/form-data">
+    
     <table>
         <tr>
             <td><label for="input_organization_name">Organization Name</label></td>
@@ -27,7 +156,7 @@
     </table>
     
     <button type="submit" title="click to create a new contact" class="btn btn-primary">Add New Organization</button>
-</form>
-{{message}}
+</form> -->
+
 
 {% endblock %}
