--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/home.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/home.html
@@ -19,6 +19,9 @@
         background: rgb(118, 213, 245);
         padding: 20px;
     }
+    a.btn.btn-info.btn-lg {
+        margin-left: 20px;
+    }
 </style>
 
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
@@ -78,7 +81,7 @@
 
     
 
-<a href="#" class="btn btn-info btn-lg">
+<a href="{% url 'volunteerapp:add_organization' %}" class="btn btn-info btn-lg">
     <span class="glyphicon glyphicon-plus"></span> Add Organization
 </a>
 
