updated roi view/html

--- a/volunteer_philippines/volunteerapp/templates/volunteerapp/base.html
+++ b/volunteer_philippines/volunteerapp/templates/volunteerapp/base.html
@@ -55,6 +55,7 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="{% url 'volunteerapp:home' %}">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link active" href="{% url 'volunteerapp:news' %}">News</a>
+                <a class="nav-item nav-link active" href="{% url 'volunteerapp:roi' %}">ROI</a>
                 <a class="nav-item nav-link grey" href="{% url 'volunteerapp:register' %}" text>Register</a>
                 <a class="nav-item nav-link grey" href="{% url 'volunteerapp:login_page' %}">Login</a>
                 <a class="nav-item nav-link grey" href="{% url 'volunteerapp:logout_user' %}">Logout</a>
